Updated Greek translation
svn path=/trunk/; revision=14703

--- a/po/el.po
+++ b/po/el.po
@@ -1648,7 +1648,7 @@ msgstr "_Συγχώνευση"
 
 #: ../libnautilus-private/nautilus-file-operations.c:177
 msgid "Merge _All"
-msgstr "Επιλογή ό_λων"
+msgstr "Συγχώνευση ό_λων"
 
 #: ../libnautilus-private/nautilus-file-operations.c:216
 #, c-format
@@ -5373,7 +5373,7 @@ msgstr "Σύνδεση στον εξυπηρετητή"
 
 #: ../src/nautilus-connect-server-dialog.c:806
 msgid "Service _type:"
-msgstr "Επιλογή _τύπου:"
+msgstr "_Τύπος υπηρεσίας:"
 
 #: ../src/nautilus-connect-server-dialog.c:900
 msgid "Add _bookmark"
