Updated translation by Thanos, Giorgos
svn path=/branches/gnome-2-24/; revision=14705

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-10-07  Simos Xenitellis  <simos@gnome.org>
+
+	* el.po: Updated translation by Thanos, Giorgos.
+
 2008-10-07  Priit Laes  <plaes at svn dot gnome dot org>
 
 	* et.po: Translation updated by Ivar Smolin
