--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-10-09  Priit Laes  <plaes at svn dot gnome dot org>
+
+	* et.po: Translation updated by Ivar Smolin
+
 2008-10-07  Simos Xenitellis  <simos@gnome.org>
 
 	* el.po: Updated Greek translation.
