Translation updated by Ivar Smolin
2008-10-09  Priit Laes  <plaes at svn dot gnome dot org>

	* et.po: Translation updated by Ivar Smolin

svn path=/branches/gnome-2-24/; revision=14708

--- a/po/et.po
+++ b/po/et.po
@@ -20,7 +20,7 @@ msgstr ""
 "Project-Id-Version: nautilus 2.24\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-10-02 04:17+0000\n"
-"PO-Revision-Date: 2008-09-20 08:46+0300\n"
+"PO-Revision-Date: 2008-10-07 21:01+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -2809,7 +2809,7 @@ msgstr "Käivita _terminalis"
 
 #: ../libnautilus-private/nautilus-mime-actions.c:684
 msgid "_Display"
-msgstr "_Kuva"
+msgstr "Ku_va"
 
 #: ../libnautilus-private/nautilus-mime-actions.c:687
 #: ../src/nautilus-autorun-software.c:230
