Don't use eel_gdk_color_parse anymore. We don't have any colors left not
2008-10-09  Alexander Larsson  <alexl@redhat.com>

        * src/nautilus-property-browser.c:
        (nautilus_property_browser_drag_data_get):
	Don't use eel_gdk_color_parse anymore. We don't have any colors
	left not supported by gdk_color_parse.
	


svn path=/trunk/; revision=14709

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-10-09  Alexander Larsson  <alexl@redhat.com>
+
+        * src/nautilus-property-browser.c:
+        (nautilus_property_browser_drag_data_get):
+	Don't use eel_gdk_color_parse anymore. We don't have any colors
+	left not supported by gdk_color_parse.
+	
 2008-10-08  Christian Persch  <chpe@gnome.org>
 
 	* libnautilus-private/nautilus-mime-application-chooser.c:
