Update EggSMClient from libegg
2008-10-09  Alexander Larsson  <alexl@redhat.com>

        * cut-n-paste-code/libegg/eggdesktopfile.c:
        * cut-n-paste-code/libegg/eggdesktopfile.h:
        * cut-n-paste-code/libegg/eggsmclient-xsmp.c:
        * cut-n-paste-code/libegg/eggsmclient.c:
	Update EggSMClient from libegg



svn path=/trunk/; revision=14710

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2008-10-09  Alexander Larsson  <alexl@redhat.com>
 
+        * cut-n-paste-code/libegg/eggdesktopfile.c:
+        * cut-n-paste-code/libegg/eggdesktopfile.h:
+        * cut-n-paste-code/libegg/eggsmclient-xsmp.c:
+        * cut-n-paste-code/libegg/eggsmclient.c:
+	Update EggSMClient from libegg
+
+2008-10-09  Alexander Larsson  <alexl@redhat.com>
+
         * src/nautilus-property-browser.c:
         (nautilus_property_browser_drag_data_get):
 	Don't use eel_gdk_color_parse anymore. We don't have any colors
