Make sure uri list is NULL terminated
2008-10-09  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-main.c (main):
	Make sure uri list is NULL terminated


svn path=/trunk/; revision=14713

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-10-09  Alexander Larsson  <alexl@redhat.com>
 
+	* src/nautilus-main.c (main):
+	Make sure uri list is NULL terminated
+
+2008-10-09  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-horizontal-splitter.c:
         (nautilus_horizontal_splitter_button_press):
         (nautilus_horizontal_splitter_button_release):
