--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-10-11  Christian Neumair  <cneumair@gnome.org>
+
+	* libnautilus-private/nautilus-file-operations.c
+	(make_file_name_valid_for_dest_fs):
+	Chop trailing spaces when moving to FAT file system. Fixes #555813.
+
 2008-10-09  Alexander Larsson  <alexl@redhat.com>
 
 	Merged from trunk:
