Reveal the selection after the user sorts by some type or clicks the
2008-10-12  Nelson Benítez León  <nbenitez@svn.gnome.org>

	* src/file-manager/fm-icon-view.c
	(set_sort_criterion_by_sort_type)
	(action_reversed_order_callback):
	Reveal the selection after the user sorts by some type or clicks the
	"reverse order" sort action. Fixes #45588.

svn path=/trunk/; revision=14718

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-10-12  Nelson Benítez León  <nbenitez@svn.gnome.org>
+
+	* src/file-manager/fm-icon-view.c
+	(set_sort_criterion_by_sort_type)
+	(action_reversed_order_callback):
+	Reveal the selection after the user sorts by some type or clicks the
+	"reverse order" sort action. Fixes #45588.
+
 2008-10-11  Christian Neumair  <cneumair@gnome.org>
 
 	* libnautilus-private/nautilus-file-operations.c
