Fixed terminology in Brazilian Portuguese translation by Vladimir Melo.
2008-10-12  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>

	* pt_BR.po: Fixed terminology in Brazilian Portuguese translation by
	Vladimir Melo.

svn path=/branches/gnome-2-24/; revision=14720

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -6703,7 +6703,7 @@ msgstr "Exibe os créditos dos criadores do Nautilus"
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:829
 msgid "Zoom _In"
-msgstr "_Aproximar"
+msgstr "_Ampliar"
 
 #. tooltip
 #: ../src/nautilus-window-menus.c:830 ../src/nautilus-zoom-control.c:92
@@ -6715,7 +6715,7 @@ msgstr "Aumenta o tamanho de visão"
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:841
 msgid "Zoom _Out"
-msgstr "_Distanciar"
+msgstr "Redu_zir"
 
 #. tooltip
 #: ../src/nautilus-window-menus.c:842 ../src/nautilus-zoom-control.c:93
@@ -6871,11 +6871,11 @@ msgstr "A mídia foi detectada como \"%s\"."
 
 #: ../src/nautilus-zoom-control.c:80
 msgid "Zoom In"
-msgstr "Aproximar"
+msgstr "Ampliar"
 
 #: ../src/nautilus-zoom-control.c:81
 msgid "Zoom Out"
-msgstr "Distanciar"
+msgstr "Reduzir"
 
 #: ../src/nautilus-zoom-control.c:82
 msgid "Zoom to Default"
@@ -6887,7 +6887,7 @@ msgstr "Zoom"
 
 #: ../src/nautilus-zoom-control.c:896
 msgid "Set the zoom level of the current view"
-msgstr "Define o nível de aproximação da visão atual"
+msgstr "Define o nível de zoom da visão atual"
 
 #~ msgid "Are you sure you want to forget history?"
 #~ msgstr "Você tem certeza que quer esquecer o histórico?"
