--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-10-13  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-open-with-dialog.c:
+        (add_or_find_application):
+	Don't set default when opening with other app, just
+	add to open with list.
+
 2008-10-12  Nelson Benítez León  <nbenitez@svn.gnome.org>
 
 	* libnautilus-private/nautilus-dnd.c
