Allow resetting file associations (#545356) Patch from Matthias Clasen
2008-10-13  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-mime-application-chooser.c:
	Allow resetting file associations (#545356)
	Patch from Matthias Clasen 


svn path=/trunk/; revision=14725

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-10-13  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-mime-application-chooser.c:
+	Allow resetting file associations (#545356)
+	Patch from Matthias Clasen 
+
+2008-10-13  Alexander Larsson  <alexl@redhat.com>
+
         * configure.in:
 	Require glib 2.19.0
 	
