Plug a mem leak. Bug #552691.
	* src/nautilus-image-properties-page.c: Plug a mem leak. Bug #552691.

svn path=/trunk/; revision=14726

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-10-13  Christian Persch  <chpe@gnome.org>
+
+	* src/nautilus-image-properties-page.c: Plug a mem leak. Bug #552691.
+
 2008-10-13  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-mime-application-chooser.c:
