Updated Dzongkha Translation
svn path=/branches/gnome-2-22/; revision=14728

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-10-16  Pema Geyleg  <pema.geyleg@gmail.com>
+
+        * dz.po: Updated Dzongkha Translation
+
 2008-07-29  Funda Wang  <fundawang@gmail.com>
 
 	* zh_CN.po: Updated zh_CN translation.
