--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-10-16  Pema Geyleg  <pema.geyleg@gmail.com>
+
+        * dz.po: Updated Dzongkha Translation
+
 2008-10-12  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
 
 	* pt_BR.po: Fixed terminology in Brazilian Portuguese translation by
