Fix broken mnemonic for "Create _Folder" context menu entry (bug #555016)
2008-10-17  Andre Klapper  <a9016009@gmx.de>

	* /src/file-manager/fm-tree-view.c:
	Fix broken mnemonic for "Create _Folder" context menu entry (bug #555016)


svn path=/branches/gnome-2-24/; revision=14738

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-10-17  Andre Klapper  <a9016009@gmx.de>
+
+	* /src/file-manager/fm-tree-view.c:
+	Fix broken mnemonic for "Create _Folder" context menu entry (bug #555016)
+
 2008-10-17  Alexander Larsson  <alexl@redhat.com>
 
 	Merged from trunk:
