--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-10-18  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* libnautilus-private/apps_nautilus_preferences.schemas.in:
+	Add a comment for translators (#548389).
+
 2008-10-17  Andre Klapper  <a9016009@gmx.de>
 
 	* /src/file-manager/fm-tree-view.c:
