--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -2,6 +2,10 @@
 
 	* ar.po: Updated Arabic Translation by Anas Afif Emad.
 
+2008-10-19  Djihed Afifi <djihed@gmail.com> 
+
+	* ar.po: Updated Arabic Translation by Anas Afif Emad.
+
 2008-10-16  Pema Geyleg  <pema.geyleg@gmail.com>
 
         * dz.po: Updated Dzongkha Translation
