Update for release
2008-10-20  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release
	


svn path=/branches/gnome-2-24/; revision=14745

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+Major changes in 2.24.1 are:
+* Fix saving of spatial window geometry on close
+* Remove trailing spaces on filenames when copying to FAT file systems
+* Allow emblems that don't start with "emblem-"
+* On unmount close tabs that show the unmounted location
+* Fixed redraw issues with labels on zoom
+* Don't toggle sidebar splitter when dragging it
+* Fix bookmark issue that sometimes led to locations not loading
+* Don't show the "cancel" dialog after a timeout when displaying a dialog
+* Fix crashes and leaks
+
 Major changes in 2.24.0 are:
 * Icon/compact view:
    * Follow run-time changes to set of icon text attributes to be displayed
