--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-10-20  Alexander Larsson  <alexl@redhat.com>
 
+	* NEWS:
+	Update for release
+	
+2008-10-20  Alexander Larsson  <alexl@redhat.com>
+
 	Merged from trunk:
 
         * libnautilus-private/nautilus-mime-actions.c:
