--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-10-20  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump
+
+=== nautilus 2.24.1 ===
+
+2008-10-20  Alexander Larsson  <alexl@redhat.com>
+
 	* NEWS:
 	Update for release
 	
