Updated Valencian (Southern Catalan) translation from the Catalan file.
2008-10-20  Jordi Mallach  <jordi@sindominio.net>

	* ca@valencia.po: Updated Valencian (Southern Catalan) translation
	from the Catalan file.

svn path=/trunk/; revision=14748

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-10-20  Jordi Mallach  <jordi@sindominio.net>
+
+	* ca@valencia.po: Updated Valencian (Southern Catalan) translation
+	from the Catalan file.
+
 2008-10-12  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
 
 	* pt_BR.po: Merged from branch gnome-2-24 terminology fixes in Brazilian
