Updated Valencian (Southern Catalan) translation from the Catalan file.
2008-10-20  Jordi Mallach  <jordi@sindominio.net>

	* ca@valencia.po: Updated Valencian (Southern Catalan) translation
	from the Catalan file.

svn path=/branches/gnome-2-24/; revision=14749

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-10-20  Jordi Mallach  <jordi@sindominio.net>
+
+	* ca@valencia.po: Updated Valencian (Southern Catalan) translation
+	from the Catalan file.
+
 === nautilus 2.24.1 ===
 
 2008-10-19  Djihed Afifi <djihed@gmail.com> 
