updated ChangeLog translation
svn path=/branches/gnome-2-24/; revision=14750

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,7 +1,14 @@
+
+2008-10-19  Danishka Navin <danishka@gmail.com> 
+
+	* si.po: Updated Sinhala Translation
+
+
 2008-10-20  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca@valencia.po: Updated Valencian (Southern Catalan) translation
 	from the Catalan file.
+
 
 === nautilus 2.24.1 ===
 
