Updated some Georgian phrases
svn path=/trunk/; revision=14752

--- a/po/ka.po
+++ b/po/ka.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: ka\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-10-02 22:36+0200\n"
-"PO-Revision-Date: 2008-10-03 00:28+0200\n"
+"PO-Revision-Date: 2008-10-20 21:18+0200\n"
 "Last-Translator: Vladimer Sichinava  ვლადიმერ სიჭინავა <vsichi@gnome.org>\n"
 "Language-Team: Georgian <http://mail.gnome.org/mailman/listinfo/gnome-ge-"
 "list>\n"
@@ -751,7 +751,7 @@ msgstr ""
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:79
 msgid "List of x-content/* types set to \"Do Nothing\""
-msgstr ""
+msgstr "x-content/* ტიპი დაყენებულია \"არაფრის კეთება\" რეჟიმზე"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:80
 msgid "List of x-content/* types set to \"Open Folder\""
@@ -4757,17 +4757,19 @@ msgstr ""
 #: ../src/nautilus-autorun-software.c:150
 #, c-format
 msgid "Cannot find the autorun program"
-msgstr ""
+msgstr "შეუძლებელია ავტოგაშვებადი პროგრამის პოვნა"
 
 #: ../src/nautilus-autorun-software.c:168
 msgid "<big><b>Error autorunning software</b></big>"
-msgstr ""
+msgstr "<big><b>დაიშვა შეცდომა პროგრამის ავტოგაშვებისას</b></big>"
 
 #: ../src/nautilus-autorun-software.c:194
 msgid ""
 "<big><b>This medium contains software intended to be automatically started. "
 "Would you like to run it?</b></big>"
 msgstr ""
+"<big><b>მოცემული მედია შეიცავს ავტოგაშვებად პროგრამას. გნებავთ ამ პროგრამის "
+"გაშვება?</b></big>"
 
 #: ../src/nautilus-autorun-software.c:196
 #, c-format
@@ -4777,6 +4779,10 @@ msgid ""
 "\n"
 "If in doubt, press Cancel."
 msgstr ""
+"ეს პროგრამა პირდაპირ მედიიდან გაიშვება \"%s\". არასოდეს ჩართოთ არასანდო "
+"პროგრამები.\n"
+"\n"
+"თუ არ იცით როგორ მოიქცეთ დააჭირეთ 'გაუქმება'-ს."
 
 #: ../src/nautilus-bookmarks-window.c:160
 #: ../src/nautilus-file-management-properties.c:206
@@ -6182,7 +6188,7 @@ msgstr "სანიშნე არ არსებული მისამა
 
 #: ../src/nautilus-window-manage-views.c:731
 msgid "You can choose another view or go to a different location."
-msgstr ""
+msgstr "შესაძლებელია სხვა ხედის ამორჩევა ან სხვა მდებარეობაზე გადასვლა."
 
 #: ../src/nautilus-window-manage-views.c:750
 msgid "The location cannot be displayed with this viewer."
