Mark two strings for translation (#557156).
2008-10-21  Cosimo Cecchi  <cosimoc@gnome.org>

	* src/file-manager/fm-tree-view.c: (create_popup_menu):
	Mark two strings for translation (#557156).

svn path=/trunk/; revision=14753

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-10-21  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* src/file-manager/fm-tree-view.c: (create_popup_menu):
+	Mark two strings for translation (#557156).
+
 2008-10-20  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-mime-actions.c:
