Use normal weighting in the tree view sidebar. Closes bug #311786.
2008-10-22  A. Walton  <awalton@gnome.org>

	* src/file-manager/fm-tree-model.c (fm_tree_model_get_column_type),
	(fm_tree_model_get_value):
	* src/file-manager/fm-tree-model.h:
	* src/file-manager/fm-tree-view.c (create_tree):
	Use normal weighting in the tree view sidebar. Closes bug #311786.


svn path=/trunk/; revision=14756

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-10-22  A. Walton  <awalton@gnome.org>
+
+	* src/file-manager/fm-tree-model.c (fm_tree_model_get_column_type),
+	(fm_tree_model_get_value):
+	* src/file-manager/fm-tree-model.h:
+	* src/file-manager/fm-tree-view.c (create_tree):
+	Use normal weighting in the tree view sidebar. Closes bug #311786.
+
 2008-10-21  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* src/file-manager/fm-tree-view.c: (create_popup_menu):
