--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-10-23  Andre Klapper  <a9016009@gmx.de>
+
+        * LINGUAS: Added ast.
+        * ast.po: Added Asturian translation on behalf of Mikel González.
 
 2008-10-19  Danishka Navin <danishka@gmail.com> 
 
