--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-10-23  Andre Klapper  <a9016009@gmx.de>
+
+        * LINGUAS: Added ast.
+        * ast.po: Added Asturian translation on behalf of Mikel González.
+
 2008-10-20  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca@valencia.po: Updated Valencian (Southern Catalan) translation
