Translation updated by Priit Laes
2008-10-25  Priit Laes  <plaes at svn dot gnome dot org>

	* et.po: Translation updated by Priit Laes

svn path=/branches/gnome-2-24/; revision=14763

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-10-25  Priit Laes  <plaes at svn dot gnome dot org>
+
+	* et.po: Translation updated by Priit Laes
+
 2008-10-23  Andre Klapper  <a9016009@gmx.de>
 
         * LINGUAS: Added ast.
