Improvements in Brazilian Portuguese translation by Fabrício Godoy.
2008-10-25  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>

	* pt_BR.po: Improvements in Brazilian Portuguese translation by Fabrício
	Godoy.

svn path=/branches/gnome-2-24/; revision=14765

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-10-25  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
+
+	* pt_BR.po: Improvements in Brazilian Portuguese translation by Fabrício
+	Godoy.
+
 2008-10-25  Priit Laes  <plaes at svn dot gnome dot org>
 
 	* et.po: Translation updated by Priit Laes
