--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-10-27  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* POTFILES.in: update after the move away from libgnome/bonobo/glade.
+	Thanks to Frederic Peters (#558134).
+
 2008-10-25  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
 
 	* pt_BR.po: Merged from branch gnome-2-24 improvements in Brazilian
