Update the about dialog description. Thanks to Matthew Paul Thomas
2008-10-28  Cosimo Cecchi  <cosimoc@gnome.org>

        * src/nautilus-window-menus.c:
        (action_about_nautilus_callback):
	Update the about dialog description.
	Thanks to Matthew Paul Thomas (#551483).

svn path=/trunk/; revision=14769

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-10-28  Cosimo Cecchi  <cosimoc@gnome.org>
+
+        * src/nautilus-window-menus.c:
+        (action_about_nautilus_callback):
+	Update the about dialog description.
+	Thanks to Matthew Paul Thomas (#551483).
+
 2008-10-27  Christian Persch  <chpe@gnome.org>
 
 	* libnautilus-extension/nautilus-location-widget-provider.h:
