--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-10-28  Daniel Nylander <po@danielnylander.se>
+
+	* sv.po: Updated Swedish translation.
+
 2008-10-27  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* POTFILES.in: update after the move away from libgnome/bonobo/glade.
