Set correct hint on search popup window. (#536804)
2008-11-06  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-icon-container.c:
        (nautilus_icon_container_ensure_interactive_directory):
	Set correct hint on search popup window. (#536804)

	Patch from Danny Baumann


svn path=/trunk/; revision=14771

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-11-06  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-icon-container.c:
+        (nautilus_icon_container_ensure_interactive_directory):
+	Set correct hint on search popup window. (#536804)
+
+	Patch from Danny Baumann
+
 2008-10-28  Cosimo Cecchi  <cosimoc@gnome.org>
 
         * src/nautilus-window-menus.c:
