--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-06  Luca Ferretti  <elle.uca@libero.it>
+
+	* it.po: Updated Italian translation.
+
 2008-10-28  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
