--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-08  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>
+
+	* eu.po: Fixed some errors in Basque translation.
+
 2008-10-16  Pema Geyleg  <pema.geyleg@gmail.com>
 
         * dz.po: Updated Dzongkha Translation
