--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-08  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>
+
+	* eu.po: Fixed some errors and updated Basque translation.
+
 2008-11-06  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Updated Italian translation.
