Updated Spanish translation
svn path=/trunk/; revision=14776

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-08  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
+
+	* es.po: Updated Spanish translation.   
+
 2008-11-08  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>
 
 	* eu.po: Fixed some errors and updated Basque translation.
