--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-09  Goran Rakić  <grakic@devbase.net>
+
+        * sr.po, sr@latin.po: Updated Serbian Translation (by Miloš Popović).
+
 2008-11-08  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
 	* es.po: Updated Spanish translation.   
