2008-11-09  Leonardo Ferreira Fontenelle  leonardof@gnome.org
	* pt_BR.po: Minor improvements in the Brazilian Portuguese translation.

svn path=/branches/gnome-2-24/; revision=14778

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -3286,7 +3286,7 @@ msgstr "Houve um erro ao exibir a ajuda."
 
 #: ../src/file-manager/fm-directory-view.c:1155
 msgid "Select Items Matching"
-msgstr "Selecionar itens coincidentes"
+msgstr "Selecionar ocorrências de padrão..."
 
 #: ../src/file-manager/fm-directory-view.c:1173
 msgid "_Pattern:"
@@ -3365,7 +3365,7 @@ msgstr "%s (%s)"
 #: ../src/file-manager/fm-directory-view.c:2206
 #, c-format
 msgid "%s, Free space: %s"
-msgstr "%s, Espaço livre: %s"
+msgstr "%s, espaço livre: %s"
 
 #. This is marked for translation in case a localizer
 #. * needs to change ", " to something else. The comma
