--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-09  Petr Kovar  <pknbe@volny.cz>
+
+	* cs.po: Fixed Czech translation (thanks to Kamil Paral).
+
 2008-11-09  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
 
 	* pt_BR.po: Minor improvements in Brazilian Portuguese translation.
