Fixed a few errors
svn path=/branches/gnome-2-22/; revision=14782

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-11  Mark Krapivner  <mark125@gmail.com>
+
+	* he.po: Fixed a few errors
+
 2008-11-08  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>
 
 	* eu.po: Fixed some errors in Basque translation.
