--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-11  Mark Krapivner  <mark125@gmail.com>
+
+	* he.po: Fixed a few errors
+
 2008-11-09  Petr Kovar  <pknbe@volny.cz>
 
 	* cs.po: Fixed Czech translation (thanks to Kamil Paral).
