Plug two memory leaks.
2008-11-18  Cosimo Cecchi  <cosimoc@gnome.org>

	* src/nautilus-main.c: (main):
	* src/nautilus-window-slot.c: (nautilus_window_slot_dispose):
	Plug two memory leaks.

svn path=/trunk/; revision=14786

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-11-18  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* src/nautilus-main.c: (main):
+	* src/nautilus-window-slot.c: (nautilus_window_slot_dispose):
+	Plug two memory leaks.
+
 2008-11-11  A. Walton  <awalton@gnome.org>
 
 	* src/file-manager/fm-directory-view.c
