Don't unref the SMClient (#561402).
2008-11-21  Cosimo Cecchi  <cosimoc@gnome.org>

	* src/nautilus-application.c: (nautilus_application_finalize):
	Don't unref the SMClient (#561402).

svn path=/trunk/; revision=14787

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-11-21  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* src/nautilus-application.c: (nautilus_application_finalize):
+	Don't unref the SMClient (#561402).
+
 2008-11-18  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* src/nautilus-main.c: (main):
