--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-11-21  Cosimo Cecchi  <cosimoc@gnome.org>
 
+	* configure.in: completely remove librsvg checks.
+
+2008-11-21  Cosimo Cecchi  <cosimoc@gnome.org>
+
 	* src/nautilus-application.c: (nautilus_application_finalize):
 	Don't unref the SMClient (#561402).
 
