Update for release
2008-11-24  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release


svn path=/branches/gnome-2-24/; revision=14789

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-11-24  Alexander Larsson  <alexl@redhat.com>
+
+	* NEWS:
+	Update for release
+
 2008-10-23  Alexander Larsson  <alexl@redhat.com>
 
 	Merged from trunk:
