--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Major changes in 2.24.2 are:
+* Fix custom mime icons, requires new glib & gvfs
+* Fix crashes
+
 Major changes in 2.24.1 are:
 * Fix saving of spatial window geometry on close
 * Remove trailing spaces on filenames when copying to FAT file systems
