Post release version bump
2008-11-24  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump

=== nautilus 2.24.2 ===


svn path=/branches/gnome-2-24/; revision=14791

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-11-24  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump
+
+=== nautilus 2.24.2 ===
+
+2008-11-24  Alexander Larsson  <alexl@redhat.com>
+
 	* NEWS:
 	Update for release
 
