--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-12-01  Alexander Larsson  <alexl@redhat.com>
+
+	* NEWS:
+	Update for release
+
 2008-11-21  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* configure.in: completely remove librsvg checks.
