--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-12-01  Alexander Larsson  <alexl@redhat.com>
 
+        * src/nautilus-main.c:
+        (main):
+	Don't crash if nautilus.desktop is not installed (i.e. at make check)
+
+2008-12-01  Alexander Larsson  <alexl@redhat.com>
+
 	* NEWS:
 	Update for release
 
