--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2008-12-01  Alexander Larsson  <alexl@redhat.com>
+
+        * POTFILES.in:
+        * POTFILES.skip:
+	Update
+
 2008-11-11  Mark Krapivner  <mark125@gmail.com>
 
 	* he.po: Fixed a few errors
