--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,13 @@
 2008-12-01  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump
+
+=== nautilus 2.25.1 ===
+
+2008-12-01  Alexander Larsson  <alexl@redhat.com>
+
         * src/nautilus-main.c:
-        (main):
 	Don't crash if nautilus.desktop is not installed (i.e. at make check)
 
 2008-12-01  Alexander Larsson  <alexl@redhat.com>
