Fixed Ubuntu bug lp#197224
svn path=/trunk/; revision=14796

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-12-03  Goran Rakić  <grakic@devbase.net>
+
+        * sr.po, sr@latin.po: Fixed Ubuntu bug lp#197224.
+
 === nautilus 2.25.1 ===
 	
 2008-12-01  Alexander Larsson  <alexl@redhat.com>
