--- a/po/sr.po
+++ b/po/sr.po
@@ -2056,10 +2056,10 @@ msgstr[3] "Умножавам датотеку (из „%B“) у „%B“"
 #: ../libnautilus-private/nautilus-file-operations.c:2768
 msgid "Duplicating %'d file (in \"%B\")"
 msgid_plural "Duplicating %'d files (in \"%B\")"
-msgstr[0] "Удвостручујем %'d датотеку (из „%B“) у „%B“"
-msgstr[1] "Удвостручујем %'d датотеке (из „%B“) у „%B“"
-msgstr[2] "Удвостручујем %'d датотека (из „%B“) у „%B“"
-msgstr[3] "Удвостручујем датотеку (из „%B“) у „%B“"
+msgstr[0] "Удвостручујем %'d датотеку (из „%B“)"
+msgstr[1] "Удвостручујем %'d датотеке (из „%B“)"
+msgstr[2] "Удвостручујем %'d датотека (из „%B“)"
+msgstr[3] "Удвостручујем датотеку (из „%B“)"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2778
 msgid "Moving %'d file to \"%B\""
