--- a/po/sr@latin.po
+++ b/po/sr@latin.po
@@ -2056,10 +2056,10 @@ msgstr[3] "Umnožavam datoteku (iz „%B“) u „%B“"
 #: ../libnautilus-private/nautilus-file-operations.c:2768
 msgid "Duplicating %'d file (in \"%B\")"
 msgid_plural "Duplicating %'d files (in \"%B\")"
-msgstr[0] "Udvostručujem %'d datoteku (iz „%B“) u „%B“"
-msgstr[1] "Udvostručujem %'d datoteke (iz „%B“) u „%B“"
-msgstr[2] "Udvostručujem %'d datoteka (iz „%B“) u „%B“"
-msgstr[3] "Udvostručujem datoteku (iz „%B“) u „%B“"
+msgstr[0] "Udvostručujem %'d datoteku (iz „%B“)"
+msgstr[1] "Udvostručujem %'d datoteke (iz „%B“)"
+msgstr[2] "Udvostručujem %'d datoteka (iz „%B“)"
+msgstr[3] "Udvostručujem datoteku (iz „%B“)"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2778
 msgid "Moving %'d file to \"%B\""
